# gstreamer-ros-bridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
include/gstreamer-ros-bridge/: gstreamer_bridge.hpp  gstreamer_cam.hpp  gstreamer_publisher.hpp
include/gstreamer_ros_bridge/: gstreamer_bridge.hpp  gstreamer_cam.hpp  gstreamer_publisher.hpp
launch/: camera_bridge.launch  emeet.launch  emeet.py  gstreamer_bridge.launch  gstreamer_cam.launch  gstreamer_publisher.launch  imx219.py  ir_camera.launch  ir_camera.py  jetson_imx219.launch  jetson_imx219_nodelet.launch  libcamera.launch  logi_cam.py  luxonis.launch  nodelet.launch  phone_cam.py  phone_cam_delay.py  publisher.py  publisher_launch.py  temp_bridge.py  v4l2.launch  v4l2.py  v4l2_example.py
launch/standalone/: gstreamer_bridge.launch  gstreamer_cam.launch
src/: .gstreamer_cam.cpp.swp  camera_utils.cpp  gstreamer_bridge.cpp  gstreamer_bridge_node.cpp  gstreamer_cam.cpp  gstreamer_cam_node.cpp  gstreamer_publisher.cpp  gstreamer_publisher_node.cpp
